# GA-BetaBursts

./: .clangd  .gitignore  CMakeLists.txt  README.txt
.cache/clangd/index/: Biquad.h.A7576E6BDA48D23A.idx  Biquad.h.D4CBEEC6EF7D8090.idx  Butterworth.h.22314C8DFFF846F8.idx  Butterworth.h.4AB285755217B425.idx  Cascade.h.BBF71A06EF517E0B.idx  Cascade.h.C29FD23B31DA2C9E.idx  Common.h.44B252B70F2E5A47.idx  Common.h.A0DA825C3597A443.idx  Layout.h.9C7ACF3AA836CF01.idx  Layout.h.A6C4EC11064172A3.idx  MathSupplement.h.34F028193E0DE082.idx  MathSupplement.h.BBC988CE42897638.idx  PoleFilter.h.B127D0FE7AADDCF8.idx  PoleFilter.h.D6F01CA42AD74703.idx  State.h.B0046BFE864BF348.idx  State.h.BAE3E2D77D5128D1.idx  Types.h.56578C3BF7476C81.idx  Types.h.9D1CC9040F0055D2.idx  euler_maruyama.hpp.9AD6811FE00CB9AF.idx  euler_maruyama.hpp.CB3D613E371FD4E0.idx  fitness.cpp.122E12A9D0E73B4E.idx  fitness.cpp.9397126C63BEB92D.idx  fitness.hpp.052BDA6E45D526FF.idx  fitness.hpp.E0EDF6FA6A6E9E37.idx  ga_parameters.h.2CCB6FF2661E8558.idx  ga_parameters.h.F16291A2B08E2905.idx  generate_model_stats.cpp.2B48BA1353FE5303.idx  generate_model_stats.cpp.EF9EE2CEB1E6E865.idx  generate_model_stats.hpp.A011DDBD088DBBF4.idx  generate_model_stats.hpp.BF6819A626DE0970.idx  generate_random_parameters.cpp.C9249A3123620707.idx  generate_real_stats.cpp.1BC2178090F21BDC.idx  generate_real_stats.cpp.6C4EDC92EF6D098F.idx  generate_real_stats.hpp.607BDB97120DA4A6.idx  generate_real_stats.hpp.D279A65A005F8FE2.idx  generation_logger.cpp.06BF49D7A9EBC9EE.idx  generation_logger.cpp.31CA41935941342E.idx  generation_logger.hpp.9CC8D81D85379A85.idx  generation_logger.hpp.D1338B7CDB56DA75.idx  genetic_algorithm.cpp.6ED3558A6D312A58.idx  (+56 more)
data/: convertmegdata.py
include/: paths.hpp
include/HMM/: hmm_test.hpp  matlab_test.hpp  run_hmm_analysis.hpp
include/genetic_algorithm/: fitness.hpp  ga_parameters.h  generation_logger.hpp  genetic_algorithm.hpp  genetic_operators.hpp  mlmc.hpp  phenotype_struct.h  selection.hpp
include/meg/: generate_real_stats.hpp
include/neural_mass_model/: euler_maruyama.hpp  generate_model_stats.hpp  json_utils.hpp  meanfield.h  parameter_utils.hpp  parameters.h
include/thresholding/: threshold_analyser.hpp  threshold_structs.h  utils.hpp
include/utils/: python_plot.hpp
main/: main.cpp  main_hmm.cpp  meg_stats.cpp  test_hmm.cpp  test_matlab.cpp
output/: summary.json
output/model/generation_0/parameters/: phenotype_0.json  phenotype_1.json  phenotype_10.json  phenotype_11.json  phenotype_12.json  phenotype_13.json  phenotype_14.json  phenotype_15.json  phenotype_16.json  phenotype_17.json  phenotype_18.json  phenotype_19.json  phenotype_2.json  phenotype_20.json  phenotype_21.json  phenotype_22.json  phenotype_23.json  phenotype_24.json  phenotype_25.json  phenotype_26.json  phenotype_27.json  phenotype_28.json  phenotype_29.json  phenotype_3.json  phenotype_30.json  phenotype_31.json  phenotype_32.json  phenotype_33.json  phenotype_34.json  phenotype_35.json  phenotype_36.json  phenotype_37.json  phenotype_38.json  phenotype_39.json  phenotype_4.json  phenotype_40.json  phenotype_41.json  phenotype_42.json  phenotype_43.json  phenotype_44.json  (+60 more)
output/model/generation_0/selected/: phenotype_19.json  phenotype_2.json  phenotype_30.json  phenotype_31.json  phenotype_34.json  phenotype_35.json  phenotype_40.json  phenotype_63.json  phenotype_70.json  phenotype_76.json
output/model/generation_1/parameters/: phenotype_0.json  phenotype_1.json  phenotype_10.json  phenotype_11.json  phenotype_12.json  phenotype_13.json  phenotype_14.json  phenotype_15.json  phenotype_16.json  phenotype_17.json  phenotype_18.json  phenotype_19.json  phenotype_2.json  phenotype_20.json  phenotype_21.json  phenotype_22.json  phenotype_23.json  phenotype_24.json  phenotype_25.json  phenotype_26.json  phenotype_27.json  phenotype_28.json  phenotype_29.json  phenotype_3.json  phenotype_30.json  phenotype_31.json  phenotype_32.json  phenotype_33.json  phenotype_34.json  phenotype_35.json  phenotype_36.json  phenotype_37.json  phenotype_38.json  phenotype_39.json  phenotype_4.json  phenotype_40.json  phenotype_41.json  phenotype_42.json  phenotype_43.json  phenotype_44.json  (+60 more)
output/model/generation_1/selected/: phenotype_0.json  phenotype_14.json  phenotype_17.json  phenotype_19.json  phenotype_2.json  phenotype_3.json  phenotype_31.json  phenotype_34.json  phenotype_4.json  phenotype_6.json
output/model/generation_10/parameters/: phenotype_0.json  phenotype_1.json  phenotype_10.json  phenotype_11.json  phenotype_12.json  phenotype_13.json  phenotype_14.json  phenotype_15.json  phenotype_16.json  phenotype_17.json  phenotype_18.json  phenotype_19.json  phenotype_2.json  phenotype_20.json  phenotype_21.json  phenotype_22.json  phenotype_23.json  phenotype_24.json  phenotype_25.json  phenotype_26.json  phenotype_27.json  phenotype_28.json  phenotype_29.json  phenotype_3.json  phenotype_30.json  phenotype_31.json  phenotype_32.json  phenotype_33.json  phenotype_34.json  phenotype_35.json  phenotype_36.json  phenotype_37.json  phenotype_38.json  phenotype_39.json  phenotype_4.json  phenotype_40.json  phenotype_41.json  phenotype_42.json  phenotype_43.json  phenotype_44.json  (+24 more)
output/model/generation_2/parameters/: phenotype_0.json  phenotype_1.json  phenotype_10.json  phenotype_11.json  phenotype_12.json  phenotype_13.json  phenotype_14.json  phenotype_15.json  phenotype_16.json  phenotype_17.json  phenotype_18.json  phenotype_19.json  phenotype_2.json  phenotype_20.json  phenotype_21.json  phenotype_22.json  phenotype_23.json  phenotype_24.json  phenotype_25.json  phenotype_26.json  (+80 more)
python_plotting/: plot_violin.py
src/HMM/: hmm_test.cpp  matlab_test.cpp  run_hmm_analysis.cpp
src/genetic_algorithm/: fitness.cpp  generation_logger.cpp  genetic_algorithm.cpp  genetic_operators.cpp  selection.cpp
src/meg/: generate_real_stats.cpp
src/neural_mass_model/: generate_model_stats.cpp  json_utils.cpp  neural_mass_model.cpp  parameter_utils.cpp
src/thresholding/: threshold_analyser.cpp  utils.cpp
src/utils/: python_plot.cpp
(+780 files in other folders)
